# OBJ-Model-Viewer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  makefile
src/: application.c  application.h  benchmark.c  benchmark.h  createShader.c  createShader.h  getGLErrors.c  getGLErrors.h  graphics.c  graphics.h  inputTracking.h  loadModel.c  loadModel.h  main.c  quaternion.c  quaternion.h  windowSystem.c  windowSystem.h
src/res/shaders/: fragment.shader  vertex.shader
